<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment4android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="os_info">osInfo</string>
    <string name="wifi_info">Wifi Info</string>
    <string name="sensor_info">Sensor Info</string>
    <string name="accel_info">NULL</string>
    <string name="light_info">NULL</string>

</resources>
